<resources>
    <string name="app_name">FunboxTest</string>
    <string name="storefront">Store-Front</string>
    <string name="backend">Back-End</string>
    <string name="buy">Купить</string>
    <string name="price">Цена</string>
    <string name="quantity">Количество</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
    <string name="rub">руб.</string>
    <string name="quant">шт.</string>
    <string name="toastError">Что-то введено неверно!</string>
    <string name="toastUpdate">Информация обновлена!</string>
    <string name="toastSave">Информация сохранена!</string>
    <string name="toastDelete">Информация удалена!</string>
    <string name="toastBuy">Покупка прошла успешно!</string>
    <string name="json">JSON</string>
    <string name="jsonToast">Json объект выведен в логи</string>

</resources>